Разделили корзину на компоненты, добавил состояние пустой корзины и сделал кнопку избранного

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-sneakers",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://60e3901a6c365a0017839302.mockapi.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
