--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "react-sneakers",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://60e3901a6c365a0017839302.mockapi.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +10,7 @@
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
